# cn-deep-learning

./: README.md
RL-Quadcopter/: README.md
RL-Quadcopter-2/: Quadcopter_Project.ipynb  Quadcopter_Project_zh.ipynb  README.md  physics_sim.py
RL-Quadcopter-master/: README.md  requirements.txt
RL-Quadcopter-master/quad_controller_rl/: package.xml  setup.py
RL-Quadcopter-master/quad_controller_rl/launch/: rl_controller.launch
RL-Quadcopter-master/quad_controller_rl/notebooks/: RL-Quadcopter-zh.ipynb  RL-Quadcopter.ipynb
RL-Quadcopter-master/quad_controller_rl/scripts/: rl_controller_node
RL-Quadcopter-master/quad_controller_rl/src/quad_controller_rl/: util.py
RL-Quadcopter-master/quad_controller_rl/src/quad_controller_rl/agents/: base_agent.py
RL-Quadcopter-master/quad_controller_rl/src/quad_controller_rl/tasks/: __init__.py  base_task.py
RL-Quadcopter/quad_controller_rl/: CMakeLists.txt
RL-Quadcopter/quad_controller_rl/notebooks/: RL-Quadcopter.ipynb
RL-Quadcopter/quad_controller_rl/scripts/: drone_sim
RL-Quadcopter/quad_controller_rl/sim/: README
RL-Quadcopter/quad_controller_rl/src/quad_controller_rl/agents/: __init__.py  policy_search.py
RL-Quadcopter/quad_controller_rl/src/quad_controller_rl/tasks/: takeoff.py
dog-project/: .gitignore  README.md  dog_app.ipynb
face-generation/: dlnd_face_generation.html  dlnd_face_generation.ipynb  dlnd_face_generation.py  helper.py  problem_unittests.py
first-neural-network/: Your_first_neural_network.html  Your_first_neural_network.ipynb  Your_first_neural_network.py
first-neural-network/.ipynb_checkpoints/: Your_first_neural_network-checkpoint.ipynb
first-neural-network/Bike-Sharing-Dataset/: Readme.txt
image-classification/: .floydignore  README.md  dlnd_image_classification.html  dlnd_image_classification.ipynb
ipnd-neural-network/: NN.py
ipnd-neural-network/.ipynb_checkpoints/: Your_first_neural_network-checkpoint.ipynb
jupyter-notebook-tutorial/: working-with-code-cells.ipynb
language-translation/: dlnd_language_translation.html  dlnd_language_translation.ipynb  dlnd_language_translation.py
tutorials/: README.md
tutorials/intro-to-tflearn/: TFLearn_Sentiment_Analysis_Solution.ipynb
tutorials/jupyter-notebook-tutorial/: keyboard-shortcuts.ipynb
tutorials/transfer-learning/: Transfer_Learning.ipynb
tv-script-generation/: dlnd_tv_script_generation-zh.ipynb  dlnd_tv_script_generation.html  dlnd_tv_script_generation.ipynb
